--- a/WebInterface/templates/index.html
+++ b/WebInterface/templates/index.html
@@ -8,18 +8,7 @@
 </head>
 <body>
 
-<div class="slidercontainer">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider1">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider2">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider3">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider4">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider5">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider6">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider7">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider8">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider9">
-  <input type="range" min="1" max="100" value="50" class="slider" id="slider10">
-</div>
+<div class="slidercontainer" id="slidercontainer"></div>
 
 </body>
 
