--- a/WebInterface/templates/index.html
+++ b/WebInterface/templates/index.html
@@ -10,6 +10,8 @@
 
 <div class="slidercontainer" id="slidercontainer"></div>
 
+<audio controls class="audioplayer" id="audioplayer" src="" type="audio/mp3"></audio>
+
 </body>
 
 <script src="../static/script.js"></script>
