--- a/WebInterface/templates/index.html
+++ b/WebInterface/templates/index.html
@@ -11,6 +11,11 @@
 <div class="slidercontainer" id="slidercontainer"></div>
 
 <audio controls class="audioplayer" id="audioplayer" src="" type="audio/mp3"></audio>
+<br>
+<div class="dropdown">
+  <button onclick="modelSelectorBtn()" class="dropbtn">Select model</button>
+  <div id="modelselector" class="dropdown-content"></div>
+</div>
 
 </body>
 
